[package]
name = "webdriver"
version = "0.1.0"
edition = "2021"

[dependencies]
fantoccini = { version = "0.21.2",features = ["rustls-tls"] }
tokio = { version = "1" , features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.8" , features = ["blocking"]}
cookie = "0.18.1"
futures = "0.3.31"
regex = "1"
indicatif = "0.16.2"
